--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
@@ -26,6 +27,7 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/react": "~18.2.14",
     "eslint": "^8.50.0",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   }
 }
