--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/react": "~18.2.14",
     "eslint": "^8.50.0",
+    "prettier-plugin-tailwindcss": "^0.5.5",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   }
