--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,6 +31,7 @@
     "@types/react": "~18.2.14",
     "eslint": "^8.50.0",
     "prettier-plugin-tailwindcss": "^0.5.5",
+    "react-native-svg-transformer": "^1.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   }
