--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
     "expo": "~49.0.13",
@@ -19,6 +22,8 @@
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "jest": "^29.2.1",
+    "jest-expo": "^49.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
@@ -26,13 +31,13 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "tailwind-merge": "^1.14.0",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/axios": "^0.14.0",
+    "@types/jest": "^29.5.6",
     "@types/react": "~18.2.14",
     "eslint": "^8.50.0",
     "prettier-plugin-tailwindcss": "^0.5.5",
