--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["nativewind/types"]
+    "types": [
+      "nativewind/types",
+      "@types/jest"
+    ]
   }
 }
