--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
-    "jest": "^29.2.1",
-    "jest-expo": "^49.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
@@ -36,10 +34,14 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@rocketseat/eslint-config": "^2.1.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.3.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^29.5.6",
     "@types/react": "~18.2.14",
     "eslint": "^8.50.0",
+    "jest": "^29.2.1",
+    "jest-expo": "^49.0.0",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "react-native-svg-transformer": "^1.1.0",
     "tailwindcss": "3.3.2",
