--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,9 @@
 {
   "preset": "jest-expo",
+  "rootDir": ".",
+  "moduleNameMapper": {
+    "@/(.*)": "<rootDir>/src/$1"
+  },
   "setupFilesAfterEnv": [
     "@testing-library/jest-native/extend-expect"
   ],
