--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^8.50.0",
     "jest": "^29.2.1",
     "jest-expo": "^49.0.0",
+    "jest-transformer-svg": "^2.0.1",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "react-native-svg-transformer": "^1.1.0",
     "tailwindcss": "3.3.2",
