✅ add type to testing-library/jest-native

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     },
     "types": [
       "nativewind/types",
-      "@types/jest"
+      "@types/jest",
+      "@testing-library/jest-native"
     ]
   }
 }
