--- a/jest.config.json
+++ b/jest.config.json
@@ -16,5 +16,16 @@
   },
   "transformIgnorePatterns": [
     "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
-  ]
+  ],
+  "testPathIgnorePatterns": [
+    "./tests/*"
+  ],
+  "collectCoverageFrom": [
+    "./src/**/*.{ts,tsx}"
+  ],
+  "coveragePathIgnorePatterns": [
+    "./src/@types",
+    "./src/libs/dayjs/*"
+  ],
+  "coverageDirectory": "./tests/coverage"
 }
