--- a/eas.json
+++ b/eas.json
@@ -10,6 +10,11 @@
       "env": {
         "EXPO_PUBLIC_WEATHER_APP_ID": "55fcf576a4cfafa329603f1399bd38cd"
       }
+    },
+    "production": {
+      "env": {
+        "EXPO_PUBLIC_WEATHER_APP_ID": "55fcf576a4cfafa329603f1399bd38cd"
+      }
     }
   }
 }
