🏗️ add simulator do build ios

--- a/eas.json
+++ b/eas.json
@@ -4,6 +4,9 @@
   },
   "build": {
     "preview": {
+      "ios": {
+        "simulator": true
+      },
       "android": {
         "distribution": "internal"
       },
