--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,6 +1,9 @@
-name: CI
+name: CI/CD
 
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   CI:
@@ -21,3 +24,13 @@ jobs:
 
       - name: Run Tests
         run: npm test
+  
+  CD: 
+    name: Continuous Delivery
+    runs-on: ubuntu-latest
+
+    needs: CI
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
