--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,6 +40,9 @@ jobs:
         with:
           node-version: 20.x
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Setup EAS
         uses: expo/expo-github-action@v8
         with:
