🧐 add build to app-bundle

--- a/eas.json
+++ b/eas.json
@@ -6,6 +6,7 @@
     "preview": {
       "autoIncrement": true,
       "android": {
+        "buildType": "app-bundle",
         "distribution": "internal",
         "autoIncrement": "versionCode"
       },
